Test JWT realm degraded and recovered states. Fix bugs. Improve test logging for understanding and diagnosing failures.